--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/VVIPKILLER1GAMING/ELEPHANTOS#readme",
   "dependencies": {
-    "discord.js": "^13.3.1"
+    "discord.js": "^13.3.1",
+    "node-fetch": "^3.1.0"
   }
 }
